--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Note Taker</title>
-        <link rel="stylesheet" href="./Develop/public/assets/css/syle.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
@@ -24,12 +24,12 @@
                 <h4 class="mt-4">Take notes with Express</h4>
                 <a
                     class="btn btn-primary btn-lg mt-4"
-                    href="/Develop/public/notes.html"
+                    href="./notes.html"
                     role="button"
                     >Get Started</a
                 >
             </div>
         </div>
-        <script src="/assets/js/index.js"></script>
+        <script src="./assets/js/index.js"></script>
     </body>
 </html>
